addons/kyverno/policies/edtech-in_dpdpa_children_verifiable_consent-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: edtech-in_dpdpa_children_verifiable_consent
  annotations:
    rulehub.id: edtech.in_dpdpa_children_verifiable_consent
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: edtech.in_dpdpa_children_verifiable_consent: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
